--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,5 @@ include ':library:navigation'
 include ':feature'
 include ':feature:healthcheck-domain'
 include ':feature:healthcheck-data'
+include ':library:feature'
+include ':library:resources'
