--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
 
         android_core_version = '1.8.0'
         android_appcompat_version = '1.4.1'
-        android_lifecycle_version = '2.3.1'
+        android_lifecycle_version = '2.4.0'
         android_room_version = "2.4.3"
         android_security_crypto = "1.1.0-alpha03"
         android_activity_compose_version = '1.3.1'
@@ -30,6 +30,9 @@ buildscript {
 
         ktor_version = '2.1.2'
         kotlin_serialization_version = '1.4.1'
+    }
+    dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$dagger_version"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
