--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,4 @@ include ':feature:healthcheck-domain'
 include ':feature:healthcheck-data'
 include ':library:feature'
 include ':library:resources'
+include ':library:storage'
