--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ buildscript {
         android_appcompat_version = '1.4.1'
         android_lifecycle_version = '2.4.0'
         android_room_version = "2.4.3"
+        android_datastore_version = "1.0.0"
         android_security_crypto = "1.1.0-alpha03"
         android_activity_compose_version = '1.3.1'
 
