--- a/screen/splash/build.gradle
+++ b/screen/splash/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'kotlin-kapt'
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
@@ -38,6 +39,9 @@ android {
 }
 
 dependencies {
+
+
+    implementation project(":library:feature")
     implementation project(":library:uikit")
     implementation project(":library:navigation")
 
@@ -47,4 +51,11 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.material3:material3:$compose_material3_version"
+
+    // Dagger and Hilt
+    implementation "com.google.dagger:dagger:$dagger_version"
+    implementation "com.google.dagger:hilt-core:$dagger_version"
+    implementation "com.google.dagger:hilt-android:$dagger_version"
+    kapt "com.google.dagger:hilt-android-compiler:$dagger_version"
+    implementation "androidx.hilt:hilt-navigation-compose:$compose_hilt_version"
 }
