--- a/settings.gradle
+++ b/settings.gradle
@@ -29,3 +29,5 @@ include ':feature:healthcheck-data'
 include ':library:feature'
 include ':library:resources'
 include ':library:storage'
+include ':feature:boorulist-domain'
+include ':feature:boorulist-data'
