--- a/settings.gradle
+++ b/settings.gradle
@@ -31,3 +31,4 @@ include ':library:resources'
 include ':library:storage'
 include ':feature:boorustorage-domain'
 include ':feature:boorustorage-data'
+include ':library:logging'
