--- a/screen/boorulist/build.gradle
+++ b/screen/boorulist/build.gradle
@@ -44,12 +44,15 @@ dependencies {
     implementation project(":library:feature")
     implementation project(":library:resources")
     implementation project(":library:storage")
+    implementation project(":library:logging")
 
     implementation project(":feature")
     implementation project(':feature:boorustorage-data')
     implementation project(':feature:boorustorage-domain')
     implementation project(':feature:healthcheck-data')
     implementation project(':feature:healthcheck-domain')
+
+    implementation project(":screen")
 
     implementation "androidx.core:core-ktx:$android_core_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$android_lifecycle_version"
