feature: implement getting booru context by its url use case

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation project(":screen")
     implementation project(":screen:splash")
     implementation project(":screen:boorulist")
+    implementation project(":screen:boorucontent")
 
     implementation "androidx.core:core-ktx:$android_core_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$android_lifecycle_version"
