--- a/settings.gradle
+++ b/settings.gradle
@@ -33,3 +33,5 @@ include ':library:storage'
 include ':feature:boorustorage-domain'
 include ':feature:boorustorage-data'
 include ':library:logging'
+include ':feature:boorupost-domain'
+include ':feature:boorupost-data'
