--- a/feature/boorupost-domain/build.gradle
+++ b/feature/boorupost-domain/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java-library'
     id 'org.jetbrains.kotlin.jvm'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.20'
 }
 
 java {
@@ -9,6 +10,8 @@ java {
 }
 dependencies {
     implementation project(":feature")
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlin_serialization_version"
 
     // Dagger & Hilt
     implementation "com.google.dagger:dagger:$dagger_version"
