--- a/screen/boorucontent/build.gradle
+++ b/screen/boorucontent/build.gradle
@@ -50,8 +50,8 @@ dependencies {
     implementation project(":feature")
     implementation project(':feature:boorustorage-data')
     implementation project(':feature:boorustorage-domain')
-    implementation project(':feature:healthcheck-data')
-    implementation project(':feature:healthcheck-domain')
+    implementation project(":feature:boorupost-domain")
+    implementation project(":feature:boorupost-data")
 
     implementation project(":screen")
 
@@ -61,7 +61,13 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.material3:material3:$compose_material3_version"
+    implementation "androidx.compose.foundation:foundation:$compose_foundation_version"
     implementation "androidx.compose.runtime:runtime:$compose_runtime_version"
+
+    // Android views
+    implementation "com.google.android.material:material:$android_material_version"
+    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
+    implementation "androidx.paging:paging-compose:1.0.0-alpha18"
 
     // Dagger and Hilt
     implementation "com.google.dagger:dagger:$dagger_version"
