--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,9 +60,12 @@ dependencies {
     implementation project(":screen:splash")
     implementation project(":screen:boorulist")
     implementation project(":screen:boorucontent")
-
+    
     implementation "androidx.core:core-ktx:$android_core_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$android_lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-process:$android_lifecycle_version"
+
+    // Jetpack Compose
     implementation "androidx.activity:activity-compose:$android_activity_compose_version"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
@@ -80,6 +83,9 @@ dependencies {
     implementation "io.ktor:ktor-client-core:$ktor_version"
     implementation "io.ktor:ktor-client-cio:$ktor_version"
     implementation("io.ktor:ktor-client-logging:$ktor_version")
+
+    // Async image loading
+    implementation "io.coil-kt:coil:$android_coil_version"
 
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.5"
