--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ buildscript {
         compose_material3_version = '1.0.0-alpha11'
         compose_foundation_version = '1.3.0'
 
+        android_activity_compose_version = '1.3.1'
+
         android_core_version = '1.8.0'
         android_appcompat_version = '1.4.1'
         android_lifecycle_version = '2.4.0'
@@ -25,9 +27,9 @@ buildscript {
         android_material_version = "1.3.0-alpha01"
         android_datastore_version = "1.0.0"
         android_security_crypto = "1.1.0-alpha03"
-        android_activity_compose_version = '1.3.1'
 
         android_timber_version = "5.0.1"
+        android_coil_version = "2.3.0"
 
         dagger_version = '2.44'
 
