--- a/screen/boorucontent/build.gradle
+++ b/screen/boorucontent/build.gradle
@@ -57,6 +57,9 @@ dependencies {
 
     implementation "androidx.core:core-ktx:$android_core_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$android_lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-process:$android_lifecycle_version"
+
+    // Jetpack Compose
     implementation "androidx.activity:activity-compose:$android_activity_compose_version"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
@@ -68,6 +71,9 @@ dependencies {
     implementation "com.google.android.material:material:$android_material_version"
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
     implementation "androidx.paging:paging-compose:1.0.0-alpha18"
+
+    // Async image loading
+    implementation "io.coil-kt:coil:$android_coil_version"
 
     // Dagger and Hilt
     implementation "com.google.dagger:dagger:$dagger_version"
