--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
         compose_navigation_version = "2.5.2"
         compose_hilt_version = '1.0.0'
         compose_swiperefresh_version = '0.27.0'
-        compose_material3_version = '1.0.0-alpha11'
+        compose_material3_version = '1.1.0-rc01'
         compose_foundation_version = '1.3.0'
 
         android_activity_compose_version = '1.3.1'
