feature: implement load state footer adapter for booru content screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Booruchan"
+        android:theme="@style/BooruchanTheme"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Booruchan">
+            android:theme="@style/BooruchanTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
