--- a/screen/boorucontent/build.gradle
+++ b/screen/boorucontent/build.gradle
@@ -18,6 +18,8 @@ android {
 
     buildFeatures {
         compose true
+        // Enable view binding for layout resources
+        viewBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
@@ -71,6 +73,7 @@ dependencies {
     implementation "com.google.android.material:material:$android_material_version"
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
     implementation "androidx.paging:paging-compose:1.0.0-alpha18"
+    implementation "androidx.constraintlayout:constraintlayout:2.2.0-alpha09"
 
     // Async image loading
     implementation "io.coil-kt:coil:$android_coil_version"
