feature: implement autocomplete repository for Gelbooru 0.2.0 version

--- a/settings.gradle
+++ b/settings.gradle
@@ -35,3 +35,5 @@ include ':feature:boorustorage-data'
 include ':library:logging'
 include ':feature:boorupost-domain'
 include ':feature:boorupost-data'
+include ':feature:booru-autocomplete-domain'
+include ':feature:booru-autocomplete-data'
