--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ plugins {
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.7.20' apply false
+    id 'com.android.dynamic-feature' version '7.3.1' apply false
 }
 
 task clean(type: Delete) {
