--- a/feature/boorustorage-domain/build.gradle
+++ b/feature/boorustorage-domain/build.gradle
@@ -12,7 +12,7 @@ java {
 dependencies {
     implementation project(":feature")
 
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.0-RC")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version")
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlin_serialization_version"
 
     // Dagger and Hilt
