--- a/feature/healthcheck/build.gradle
+++ b/feature/healthcheck/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     implementation project(":feature")
     implementation project(":extension")
 
-    // Dagger & Hilt
+    // Dagger and Hilt
     implementation "com.google.dagger:dagger:$dagger_version"
     implementation "com.google.dagger:hilt-core:$dagger_version"
 }
