--- a/settings.gradle
+++ b/settings.gradle
@@ -23,16 +23,15 @@ include ':screen:boorucontent'
 include ':library'
 include ':library:uikit'
 include ':library:navigation'
-
-include ':feature'
-include ':feature:healthcheck-domain'
-include ':feature:healthcheck-data'
 include ':library:feature'
 include ':library:resources'
 include ':library:storage'
+include ':library:logging'
+
+include ':feature'
+include ':feature:healthcheck'
 include ':feature:boorustorage-domain'
 include ':feature:boorustorage-data'
-include ':library:logging'
 include ':feature:boorupost-domain'
 include ':feature:boorupost-data'
 include ':feature:booru-autocomplete-domain'
