--- a/extension/build.gradle
+++ b/extension/build.gradle
@@ -14,6 +14,9 @@ dependencies {
     // Coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version")
 
+    // Ktor
+    implementation "io.ktor:ktor-client-core:$ktor_version"
+
     // Dagger and Hilt
     implementation "com.google.dagger:dagger:$dagger_version"
     implementation "com.google.dagger:hilt-core:$dagger_version"
