--- a/screen/boorulist/build.gradle
+++ b/screen/boorulist/build.gradle
@@ -49,8 +49,7 @@ dependencies {
     implementation project(":feature")
     implementation project(':feature:boorustorage-data')
     implementation project(':feature:boorustorage-domain')
-    implementation project(':feature:healthcheck-data')
-    implementation project(':feature:healthcheck-domain')
+    implementation project(':feature:healthcheck')
 
     implementation project(":extension")
 
