--- a/settings.gradle
+++ b/settings.gradle
@@ -40,3 +40,4 @@ include ':feature:booru-autocomplete-data'
 include ':extension'
 include ':extension:gelbooru'
 include ':extension:safebooru'
+include ':feature:postsearch'
