--- a/extension/safebooru/build.gradle
+++ b/extension/safebooru/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.dynamic-feature'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.20'
 }
 android {
     namespace 'com.makentoshe.booruchan.extension.safebooru'
@@ -28,6 +29,8 @@ dependencies {
     implementation "io.ktor:ktor-client-core:$ktor_version"
 
     implementation 'androidx.core:core-ktx:1.7.0'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlin_serialization_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
