--- a/settings.gradle
+++ b/settings.gradle
@@ -41,3 +41,4 @@ include ':extension'
 include ':extension:gelbooru'
 include ':extension:safebooru'
 include ':feature:postsearch'
+include ':feature:autocomplete'
