feature: add navigation library module

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,5 @@ include ':app'
 include ':library'
 include ':library:uikit'
 include ':library:feature'
+include ':library:logging'
+include ':library:navigation'
