--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ android {
 dependencies {
 
     implementation project(":library:logging")
+    implementation project(":library:resources")
 
     implementation "androidx.core:core-ktx:$android_core_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$android_lifecycle_version"
