--- a/settings.gradle
+++ b/settings.gradle
@@ -20,5 +20,6 @@ include ':library:uikit'
 include ':library:feature'
 include ':library:logging'
 include ':library:navigation'
+include ':library:resources'
 
 include ':screen'
