--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$android_lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-process:$android_lifecycle_version"
 
+    implementation project(":library:uikit")
+    implementation project(":library:navigation")
+
+    implementation project(":screen")
+
     // Jetpack Compose
     implementation "androidx.activity:activity-compose:$android_activity_compose_version"
     implementation "androidx.compose.ui:ui:$compose_version"
