--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,15 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.MAIN" />
+        </intent>
+    </queries>
+
+
     <application
         android:allowBackup="true"
         android:name=".Booruchan"
