--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     implementation project(":library:uikit")
     implementation project(":library:navigation")
 
+    implementation project(":feature")
+
     implementation project(":screen")
     implementation project(":screen:splash")
     implementation project(":screen:home")
