--- a/screen/home/build.gradle
+++ b/screen/home/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.material3:material3:$compose_material3_version"
+    implementation "androidx.compose.material:material:$compose_material_version"
     implementation "androidx.compose.runtime:runtime:$compose_runtime_version"
 
     // Dagger and Hilt
