--- a/screen/source/build.gradle
+++ b/screen/source/build.gradle
@@ -40,6 +40,7 @@ android {
 
 dependencies {
 
+    implementation project(":library:feature")
     implementation project(":library:navigation")
     implementation project(":library:uikit")
     implementation project(":library:logging")
