--- a/screen/source/build.gradle
+++ b/screen/source/build.gradle
@@ -44,7 +44,11 @@ dependencies {
     implementation project(":library:navigation")
     implementation project(":library:uikit")
     implementation project(":library:logging")
+    implementation project(":library:plugin")
+
     implementation project(":screen")
+
+    implementation project(":feature")
 
     implementation "com.github.Makentoshe:Booruchan-extension-base:$booruchan_plugin_version"
 
