--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ buildscript {
         android_material_version = "1.3.0-alpha01"
         android_datastore_version = "1.0.0"
         android_security_crypto = "1.1.0-alpha03"
+        android_paging_runtime_version = '3.1.1'
+        android_paging_compose_version = '1.0.0-alpha18'
+        android_constraint_layout_version = '2.2.0-alpha09'
 
         android_timber_version = "5.0.1"
         android_coil_version = "2.3.0"
